Fixed blurry item preview

--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -145,3 +145,8 @@ img {
   border-radius: 12px;
   width: 100%;
 }
+
+.pixelated-images img {
+  image-rendering: pixelated;
+  width: 100%;
+}
